Fixed bug#11804 - Too much whitespace in AgentTicketCustomer popup.

--- a/var/httpd/htdocs/skins/Agent/default/css/Core.PageLayout.css
+++ b/var/httpd/htdocs/skins/Agent/default/css/Core.PageLayout.css
@@ -24,6 +24,9 @@
      * @note    force own Block Formatting Context for nested floats
      */
     overflow: hidden;
+}
+
+.TicketZoom .LayoutFixedSidebar > .ContentColumn {
     min-height: 500px;
 }
 
